# pyoptimizer

./: .gitignore  ideas.md  pyproject.toml
src/pyoptimizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyoptimizer/ast/: constants.py  scope.py  usages.py
src/pyoptimizer/optimizations/: constant_folding.py  constant_resolving.py  fstring.py  unused.py
src/pyoptimizer/utils/: transform.py
tests/: test_constant_folding.py  test_constant_replacement.py  test_fstring.py  test_scoping.py  test_unused.py  test_usages.py
