[tool.poetry]
name = "pyoptimizer"
version = "0.1.0"
description = ""
authors = ["R1tschY <r1tschy@posteo.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
astunparse = "^1.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
